lukee yksittäisen tiedoston sijaan koko kansion